--- a/formatHomepage.css
+++ b/formatHomepage.css
@@ -137,3 +137,26 @@ div.desc {
     position: absolute;
     right: 2px;
 }
+.sidenav {
+  height: 100%;
+  width: 150px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #EAE9EB;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+.sidenav a {
+  padding: 6px 6px 6px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #626060;
+  display: block;
+}
+
+.sidenav a:hover {
+  color: #2F4F4F;
+}
