--- a/formatHomepage.css
+++ b/formatHomepage.css
@@ -138,13 +138,13 @@ div.desc {
     right: 2px;
 }
 .sidenav {
-  height: 100%;
+  height: 500px;
   width: 150px;
   position: fixed;
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #EAE9EB;
+  background-color: #F0E9EB;
   overflow-x: hidden;
   padding-top: 20px;
 }
